--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -335,3 +335,9 @@ body {
   font-weight: normal;
   font-style: normal;
 }
+
+.radix-themes {
+  --default-font-family: var(--font-montserrat), -apple-system, BlinkMacSystemFont, "Segoe UI (Custom)",
+    Roboto, "Helvetica Neue", "Open Sans (Custom)", system-ui, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji";
+}
